--- a/src/App.css
+++ b/src/App.css
@@ -47,19 +47,19 @@ body {
   border: 1px dashed #fa8072;
   border-radius: 25px;
   padding: 10px;
-  transform: rotate(3deg);
+  /* transform: rotate(3deg); */
   margin-bottom: 3px;
 }
 
 .addPostButton {
-  width: 600px;
-  height: 600px;
+  /* width: 600px;
+  height: 600px; */
   background-color: bisque;
   border: 1px solid black;
   border-radius: 10opx;
   margin-right: 40px;
   transform: rotate(7deg);
-  font-size: 20em;
+  font-size: 21em;
 }
 
 .nameField {
@@ -83,7 +83,7 @@ body {
   border: 3px dotted #fa8072;
   border-radius: 25px;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 
 .fade {
@@ -120,9 +120,5 @@ a {
 
 .nav {
   text-align: center;
-  position: fixed;
-}
-
-.post {
-  margin-right: 550px;
+  margin-left: 290px;
 }
